--- a/src/.eslintrc.json
+++ b/src/.eslintrc.json
@@ -13,7 +13,7 @@
     "react-hooks/rules-of-hooks": 2,
     "react-hooks/exjaustive-deps": 1
   },
-  "plugins": ["react", "import", "jsx-a11y, react-hooks"],
+  "plugins": ["react", "import", "jsx-a11y", "react-hooks"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
